# python-project-52

./: .env.example  .gitignore  Makefile  README.md  build.sh  code-env  conftest.py  db.sqlite3  manage.py  pyproject.toml  requirements.txt
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: asgi.py  filters.py  forms.py  forms_task.py  models.py  settings.py  test_labels.py  test_statuses.py  test_tasks.py  test_tasks_filter.py  tests.py  urls.py  urls_labels.py  urls_statuses.py  urls_tasks.py  urls_users.py  views.py  views_labels.py  views_statuses.py  views_tasks.py  views_users.py  wsgi.py
task_manager/labels/: __init__.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/migrations/: 0001_initial.py  0002_task.py  0003_label_task_labels.py  0004_status_created_at_alter_label_name_alter_status_name_and_more.py  0005_alter_status_created_at.py  0006_alter_status_created_at.py  0007_label_created_at.py
task_manager/statuses/: __init__.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/users/: apps.py  forms.py  tests.py  urls.py  views.py
templates/: base.html  index.html
templates/labels/: label_confirm_delete.html  label_form.html  label_list.html
templates/statuses/: status_confirm_delete.html  status_form.html  status_list.html
templates/tasks/: task_confirm_delete.html  task_detail.html  task_filter.html  task_form.html  task_list.html
templates/users/: login.html  password_change_form.html  user_confirm_delete.html  user_form.html  user_list.html
