[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-project-52"
version = "0.1.0"
description = "Task Manager project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Maxcosanostra" }
]
dependencies = [
  "Django>=3.2,<5.3",
  "django-bootstrap5>=23.1",
  "django-filter>=22.1",
  "dj-database-url>=1.0.0",
  "gunicorn>=20.0.0",
  "python-dotenv>=0.21.0",
  "rollbar>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "black>=22.3.0",
  "ruff>=0.0.241",
  "djlint>=1.36.4",
  "pytest-django>=4.5.2",
]

[tool.black]
line-length = 79
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | build
  | dist
  | migrations
  | staticfiles
)/
'''

[tool.ruff]
line-length = 79
select = ["E", "F", "W", "C90", "B"]
ignore = ["E501"]
exclude = [
  ".venv",
  "build",
  "dist",
  "migrations",
  "staticfiles",
]

[tool.djlint]
line-length = 79
ignore = ["H030", "H031"]

[tool.djlint.html]
wrap = true
