[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django>=3.2",
  "django-bootstrap5",
  "django-filter",
  "dj-database-url",
  "gunicorn",
  "python-dotenv",
  "rollbar",
  "psycopg2-binary",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["task_manager*"]
exclude = ["templates", "locale"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = "tests.py"

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.djlint]
line-length = 79
ignore = ["H030", "H031"]
